<resources>
    <string name="app_name">project</string>

    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="otherLogin">OR\nLogin Using </string>


    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>

    <string name="plus">New</string>

    <string name="logout">Logout</string>

    <string name="edit">Edit</string>
    <string name="logoutToast">Successfully Logged out</string>

    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
</resources>