<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/project_bg"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/rollis"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="215dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxWidth="400dp"
        android:maxHeight="50dp"
        android:minWidth="250dp"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_bg"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxWidth="400dp"
        android:maxHeight="50dp"
        android:minWidth="250dp"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <android.widget.Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_secondary_bg"
        android:maxWidth="200dp"
        android:maxHeight="50dp"
        android:minWidth="150dp"
        android:minHeight="48dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <android.widget.Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_primary_bg"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawableTint="@color/black"
        android:paddingEnd="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/otherSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/otherLogin"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otherSignIn"
        tools:layout_editor_absoluteY="487dp">

        <ImageButton
            android:id="@+id/googleSignIn"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="152dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="39dp"
            android:background="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/facebookSignIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otherSignIn"
            app:srcCompat="@drawable/ic_google" />

        <ImageButton
            android:id="@+id/facebookSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="149dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/googleSignIn"
            app:layout_constraintTop_toBottomOf="@+id/otherSignIn"
            app:srcCompat="@drawable/ic_facebook" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>